Increase line-height to avoid 'jumping' lineheight issue in safari

--- a/src/stylesheets/atoms/_btn.scss
+++ b/src/stylesheets/atoms/_btn.scss
@@ -6,5 +6,6 @@
   background: $black;
   color: $white;
   font-family: $ff-primary;
+  font-weight: 900;
   text-transform: uppercase;
 }
