--- a/src/stylesheets/atoms/_input.scss
+++ b/src/stylesheets/atoms/_input.scss
@@ -1,9 +1,9 @@
 .input {
   display: block;
   width: 100%;
-  padding: 0;
   font-family: $ff-primary;
   font-size: rem(100);
+  font-weight: 900;
   text-transform: uppercase;
   text-align: center;
   position: relative;
@@ -11,6 +11,9 @@
   border: none;
   outline: none;
   font-kerning: none;
+  margin: 0;
+  padding: 0;
+  line-height: 1.25;
 
   &.is-hidden {
     z-index: 0;
