--- a/src/stylesheets/molecules/_mirror.scss
+++ b/src/stylesheets/molecules/_mirror.scss
@@ -1,5 +1,7 @@
 .mirror {
+  font-family: $ff-primary;
   font-size: rem(100);
+  font-weight: 900;
   text-transform: uppercase;
   text-align: center;
   position: absolute;
