--- a/src/stylesheets/typography/_typography.scss
+++ b/src/stylesheets/typography/_typography.scss
@@ -1,6 +1,7 @@
 body {
   font-size: 1rem;
-  line-height: 1.15;
+  line-height: 1.25;
   font-family: $ff-primary;
   color: $body-text;
+  -webkit-font-smoothing: antialiased;
 }
